Serialisierung Speichern und laden von Netzen vollständig gelöst