@@ -1,16 +1,18 @@
 package streetsim.business;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.gson.Gson;
 import javafx.beans.property.SimpleBooleanProperty;
 import javafx.collections.FXCollections;
+import org.hildan.fxgson.FxGson;
 import streetsim.business.abschnitte.TStueck;
 import streetsim.business.exceptions.*;
 import javafx.beans.property.BooleanProperty;
 import javafx.collections.ObservableMap;
 
 import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 
 /**
@@ -20,10 +22,10 @@ import java.util.*;
 public class Strassennetz {
 
     private ObservableMap<Position, Strassenabschnitt> abschnitte;
-    private ObservableMap<Position, ArrayList<Auto>> autos;
+    private transient ObservableMap<Position, List<Auto>> autos;
     private BooleanProperty simuliert;
     private String name;
-    public static Strassennetz instance;
+    public transient static Strassennetz instance;
 
     private Strassennetz() {
         abschnitte = FXCollections.observableHashMap();
@@ -78,7 +80,7 @@ public class Strassennetz {
      * fügt ein Auto zum Strassennetz hinzu (Autos-Map)
      *
      * @param a Auto
-     * @throws SchonBelegtException wenn ein Auto auf dem Strassennetz mit selber Position und Richtung existiert
+     * @throws SchonBelegtException   wenn ein Auto auf dem Strassennetz mit selber Position und Richtung existiert
      * @throws KeinAbschnittException wenn Auto auf stelle platziert werden soll, wo noch kein Strassenabschnitt platziert worden ist
      */
     public void autoAdden(Auto a) throws SchonBelegtException, KeinAbschnittException {
@@ -148,7 +150,7 @@ public class Strassennetz {
      * @return Strassenabschnitt an der gegeben Position
      */
     public Strassenabschnitt strasseAnPos(int x, int y) {
-        Position p = new Position(x,y);
+        Position p = new Position(x, y);
         return instance.abschnitte.get(p);
     }
 
@@ -193,22 +195,37 @@ public class Strassennetz {
             // TODO: machen wir das noch?
             throw new WeltLeerException();
         }
-        ObjectMapper mapper = new ObjectMapper();
+//        ObjectMapper mapper = new ObjectMapper();
+//        try {
+//            // TODO: Can not find a deserializer for non-concrete Map type -> abstract Straßenabschnitt oder ObsvMap nicht deserialisierbar...
+//            String jsonResult = mapper.writerWithDefaultPrettyPrinter().writeValueAsString(instance);
+//            System.out.println(jsonResult);
+//            String path = file.getPath();
+//            String name = path.substring(path.lastIndexOf("/") + 1, path.lastIndexOf(".json"));
+//            instance.setName(name);
+//            FileWriter f = new FileWriter(path);
+//
+//            f.write(jsonResult);
+//            f.flush();
+//            f.close();
+//        } catch (IOException e) {
+//            e.printStackTrace();
+//        }
+        String name = file.getName();
+        instance.setName(name);
+        Gson gsonBuilder = FxGson.coreBuilder()
+                .registerTypeAdapter(Strassenabschnitt.class, new StrassenAdapter())
+                .enableComplexMapKeySerialization()
+                .setPrettyPrinting()
+                .create();
+        String jsonResult = gsonBuilder.toJson(instance);
+        String path = file.getPath();
         try {
-            // TODO: Can not find a deserializer for non-concrete Map type -> abstract Straßenabschnitt oder ObsvMap nicht deserialisierbar...
-            String jsonResult = mapper.writerWithDefaultPrettyPrinter().writeValueAsString(instance);
-            System.out.println(jsonResult);
-            String path = file.getPath();
-            String name = path.substring(path.lastIndexOf("/") + 1, path.lastIndexOf(".json"));
-            instance.setName(name);
-            FileWriter f = new FileWriter(path);
-
-            f.write(jsonResult);
-            f.flush();
-            f.close();
+            Files.writeString(Paths.get(path), jsonResult, StandardCharsets.UTF_8);
         } catch (IOException e) {
             e.printStackTrace();
         }
+
     }
 
     /**
@@ -217,15 +234,28 @@ public class Strassennetz {
      * @throws DateiParseException Datei konnte nicht gelesen werden
      */
     public void ladeNetz(File file) throws DateiParseException {
-        ObjectMapper mapper = new ObjectMapper();
+//        ObjectMapper mapper = new ObjectMapper();
+//        try {
+//            // TODO: dezerialise Position
+//            String path = file.getPath();
+//            instance = mapper.readValue(Files.readString(Path.of(path)), Strassennetz.class);
+//            instance.setName(file.getName());
+//        } catch (IOException e) {
+//            throw new DateiParseException("Datei konnte nicht gelesen werden", e);
+//        }
+
         try {
-            // TODO: dezerialise Position
-            String path = file.getPath();
-            instance = mapper.readValue(Files.readString(Path.of(path)), Strassennetz.class);
-            instance.setName(file.getName());
+            String json = Files.readString(Paths.get(file.getPath()), StandardCharsets.UTF_8);
+            Gson gson = FxGson.coreBuilder()
+                    .registerTypeAdapter(Strassenabschnitt.class, new StrassenAdapter())
+                    .enableComplexMapKeySerialization()
+                    .setPrettyPrinting()
+                    .create();
+            instance = gson.fromJson(json, Strassennetz.class);
         } catch (IOException e) {
-            throw new DateiParseException("Datei konnte nicht gelesen werden", e);
+            e.printStackTrace();
         }
+
     }
 
     /**
@@ -276,7 +306,7 @@ public class Strassennetz {
     /**
      * passt die Geschwindigkeit des Autos an
      *
-     * @param a Auto
+     * @param a               Auto
      * @param geschwindigkeit Geschwindigkeit (Intervall zwischen 0 und 1)
      */
     public void geschwindigkeitAnpassen(Auto a, float geschwindigkeit) {
@@ -355,7 +385,7 @@ public class Strassennetz {
         new Thread(() -> {
             while (!Thread.currentThread().isInterrupted()) {
                 if (instance.simuliert.get()) {
-                    for (Map.Entry<Position, ArrayList<Auto>> entry : instance.autos.entrySet()) {
+                    for (Map.Entry<Position, List<Auto>> entry : instance.autos.entrySet()) {
                         for (Auto a : entry.getValue()) {
                             a.fahre();
                         }
@@ -398,7 +428,7 @@ public class Strassennetz {
         return instance.abschnitte;
     }
 
-    public ObservableMap<Position, ArrayList<Auto>> getAutos() {
+    public ObservableMap<Position, List<Auto>> getAutos() {
         return instance.autos;
     }
 
@@ -406,7 +436,7 @@ public class Strassennetz {
         this.abschnitte = abschnitte;
     }
 
-    public void setAutos(ObservableMap<Position, ArrayList<Auto>> autos) {
+    public void setAutos(ObservableMap<Position, List<Auto>> autos) {
         this.autos = autos;
     }
 
@@ -416,11 +446,11 @@ public class Strassennetz {
         Strassenabschnitt str = new TStueck(128, 128);
         System.out.println(str.getPositionX() + " " + str.getPositionY());
         s.strasseAdden(str);
-        Auto brum = new Auto(80,80,32,32, Auto.AutoModell.ROT);
+        Auto brum = new Auto(80, 80, 32, 32, Auto.AutoModell.ROT);
         System.out.println(brum.getPositionX() + " " + brum.getPositionY() + " " + brum.getRichtung().name());
-        brum = new Auto(80,10,32,32, Auto.AutoModell.ROT);
+        brum = new Auto(80, 10, 32, 32, Auto.AutoModell.ROT);
         System.out.println(brum.getPositionX() + " " + brum.getPositionY() + " " + brum.getRichtung().name());
-        brum = new Auto(54,100,32,32, Auto.AutoModell.ROT);
+        brum = new Auto(54, 100, 32, 32, Auto.AutoModell.ROT);
         System.out.println(brum.getPositionX() + " " + brum.getPositionY() + " " + brum.getRichtung().name());
         //Auto brumbrum = new Auto(0.7f, Himmelsrichtung.NORDEN,100,100,20,30,"blau",s);
 //        Auto brum = new Auto(0.9f, Himmelsrichtung.WESTEN, 100, 100, 10, 20);
